Added a specific spectator viewport
Not finished, but this is the way to go forward with this.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -26,6 +26,7 @@ set(SOURCES
     rand.cpp
     settings.cpp
     sobject.cpp
+    spectatorviewport.cpp
     stats_recorder.cpp
     sys.cpp
     text.cpp
