Fixed building for Linux

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -92,3 +92,4 @@ endif(APPLE)
 add_executable(openliero ${GAME_SOURCES})
 add_executable(tctool ${TC_TOOL_SOURCES})
 target_link_libraries (openliero ${SDL2_LIBRARY})
+target_link_libraries (tctool ${SDL2_LIBRARY})
