--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ addons:
       - gcc-5
       - g++-5
       - clang-3.6
+      - libsdl2-dev
+      - cmake
 matrix:
   include:
     - compiler: gcc
