--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,10 @@ matrix:
             - g++-5
             - libsdl2-dev
             - cmake
-      env: COMPILER=g++-5
+      env:
+        - COMPILER=g++-5
+        - CC=gcc-5
+        - CXX=g++-5
     - compiler: clang
       addons:
         apt:
@@ -27,7 +30,10 @@ matrix:
             - clang-3.7
             - libsdl2-dev
             - cmake
-      env: COMPILER=clang++-3.7
+      env:
+        - COMPILER=clang++-3.7
+        - CC=clang-3.7
+        - CXX=clang++-3.7
 script:
     - cmake -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
     - make
