--- a/.travis.yml
+++ b/.travis.yml
@@ -4,8 +4,7 @@ dist: precise
 language: cpp
 matrix:
   include:
-    - compiler: gcc
-      addons:
+    - addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
@@ -19,8 +18,7 @@ matrix:
         - COMPILER=g++-5
         - CC=gcc-5
         - CXX=g++-5
-    - compiler: clang
-      addons:
+    - addons:
         apt:
           sources:
             - ubuntu-toolchain-r-test
