--- a/.travis.yml
+++ b/.travis.yml
@@ -16,7 +16,6 @@ matrix:
             - libsdl2-dev
             - cmake
       env:
-        - COMPILER=g++-5
         - CC=gcc-5
         - CXX=g++-5
     - compiler: clang
@@ -31,9 +30,8 @@ matrix:
             - libsdl2-dev
             - cmake
       env:
-        - COMPILER=clang++-3.7
         - CC=clang-3.7
         - CXX=clang++-3.7
 script:
-    - cmake -DCMAKE_CXX_COMPILER=$COMPILER -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
+    - cmake -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
     - make
