--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,8 @@ matrix:
             - libsdl2-dev
             - cmake
       env:
-        - CC=gcc-5
-        - CXX=g++-5
+        - CC_COMPILER=gcc-5
+        - CXX_COMPILER=g++-5
     - compiler: clang
       addons:
         apt:
@@ -30,8 +30,8 @@ matrix:
             - libsdl2-dev
             - cmake
       env:
-        - CC=clang-3.7
-        - CXX=clang++-3.7
+        - CC_COMPILER=clang-3.7
+        - CXX_COMPILER=clang++-3.7
 script:
-    - cmake -DCMAKE_C_COMPILER=$CC -DCMAKE_CXX_COMPILER=$CXX -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
+    - cmake -DCMAKE_C_COMPILER=$CC_COMPILER -DCMAKE_CXX_COMPILER=$CXX_COMPILER -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
     - make
