--- a/.travis.yml
+++ b/.travis.yml
@@ -34,4 +34,4 @@ matrix:
         - CXX_COMPILER=clang++-3.7
 script:
     - cmake -DCMAKE_C_COMPILER=$CC_COMPILER -DCMAKE_CXX_COMPILER=$CXX_COMPILER -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
-    - make
+    - make VERBOSE=1
