--- a/.travis.yml
+++ b/.travis.yml
@@ -33,4 +33,4 @@ matrix:
         - CXX_COMPILER=clang++-3.5
 script:
     - cmake -DCMAKE_C_COMPILER=$CC_COMPILER -DCMAKE_CXX_COMPILER=$CXX_COMPILER -DCMAKE_BUILD_TYPE=Release -G "Unix Makefiles"
-    - make VERBOSE=1
+    - make
