--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,7 @@ matrix:
             - gcc-5
             - g++-5
             - libsdl2-dev
-            - libsdl2-image-dev
+            - libpng-dev
             - cmake
       env:
         - CC_COMPILER=gcc-5
@@ -28,7 +28,7 @@ matrix:
           packages:
             - clang-3.5
             - libsdl2-dev
-            - libsdl2-image-dev
+            - libpng-dev
             - cmake
       env:
         - CC_COMPILER=clang-3.5
