--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,10 +4,10 @@ project (openliero)
 # add current path as module path to get required config file for sdl 2
 set(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} ".")
 find_package (SDL2 REQUIRED)
-find_package(SDL2_Image REQUIRED)
+find_package (PNG REQUIRED)
 include_directories(
     ${SDL2_INCLUDE_DIR}
-    ${SDL2_IMAGE_INCLUDE_DIR}
+    ${PNG_INCLUDE_DIR}
     ${PROJECT_SOURCE_DIR}/src
     ${PROJECT_SOURCE_DIR}/ffmpeg)
 link_directories(${PROJECT_SOURCE_DIR}/ffmpeg/libavcodec ${PROJECT_SOURCE_DIR}/ffmpeg/libavformat ${PROJECT_SOURCE_DIR}/ffmpeg/libavutil ${PROJECT_SOURCE_DIR}/ffmpeg/libswresample ${PROJECT_SOURCE_DIR}/ffmpeg/libswscale ${PROJECT_SOURCE_DIR}/x264)
@@ -109,7 +109,7 @@ endif(APPLE)
 add_executable(openliero ${GAME_SOURCES} ${RESOURCE_FILES})
 add_executable(tctool ${TC_TOOL_SOURCES})
 add_executable(videotool EXCLUDE_FROM_ALL ${VIDEO_TOOL_SOURCES})
-target_link_libraries (openliero ${SDL2_LIBRARY} ${SDL2_IMAGE_LIBRARIES})
+target_link_libraries (openliero ${SDL2_LIBRARY} ${PNG_LIBRARY})
 target_link_libraries (tctool ${SDL2_LIBRARY})
 target_link_libraries (videotool avcodec avformat avutil dl pthread swresample swscale x264)
 include_directories(src/game)
