--- a/.travis.yml
+++ b/.travis.yml
@@ -10,12 +10,11 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
             - sourceline: 'ppa:zoogie/sdl2-snapshots'
-            - sourceline: 'ppa:djcj/tools'
           packages:
             - gcc-5
             - g++-5
             - libsdl2-dev
-            - libpng16-dev
+            - libpng-dev
             - cmake
       env:
         - CC_COMPILER=gcc-5
@@ -26,11 +25,10 @@ matrix:
           sources:
             - ubuntu-toolchain-r-test
             - sourceline: 'ppa:zoogie/sdl2-snapshots'
-            - sourceline: 'ppa:djcj/tools'
           packages:
             - clang-3.5
             - libsdl2-dev
-            - libpng16-dev
+            - libpng-dev
             - cmake
       env:
         - CC_COMPILER=clang-3.5
